# etl-s3-benchmark

./: .gitignore  docker_compose.yaml  pyproject.toml
.github/workflows/: workflow.yaml
etl_s3_benchmark/: __main__.py  config.py  etl.py
etl_s3_benchmark/utils/: _connections.py  metadata.py  profiler.py
tests/: test_benchmark.py
